# PersonalQuant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.windsurf/rules/: project-manage.md
backtest_results/: performance.json
config/: config.yaml
data/raw/: etf_list_20250325.csv
schema/: README.md  quant_db.sql  quant_db_design.md
src/backtesting/: __init__.py  backtest_engine.py  bt_backtest_engine.py
src/data/: README.md  __init__.py  akshare_data.py  data_import.py  data_interface.py  data_processor.py  example.py  fetch_data.py
src/strategy/: 0606todo.md  __init__.py  choose_stock.md  fusion_strategy.py  risk_manager.py  road_choose_stock.md  road_strategy_3.md  road_strategy_7.md  road_strategy_8.md  strategy_todo.md  swing_strategy.py  trend_strategy.py  数据缺失待办.md
src/utils/: db_utils.py  db_write_test.py
