[project]
name = "personalquant"
description = "量化交易系统"
version = "0.1.0"
authors = [
    { name = "Ni Zepu", email = "zepuni@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "plotly>=5.3.0",
    "tushare>=1.2.80",
    "backtrader>=1.9.76.123",
    "requests>=2.25.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.0.0",
    "akshare>=1.16.61",
    "statsmodels>=0.13.0",
    "pandas-ta>=0.3.14b0",
    "seaborn>=0.11.0",
    "pyecharts>=1.9.0",
    "tqdm>=4.60.0",
    "python-dotenv>=0.19.0",
    "loguru>=0.5.0",
    "PyYAML>=6.0",
    "SQLAlchemy>=1.4.0",
    "pymysql>=1.0.2",
    "cryptography>=36.0.0"
]

[tool.uv]
# uv 工具相关配置（可选）
